@@ -8,13 +8,18 @@ Revision history for Net::DNS                                     -*-text-*-
 
 *** 0.61_01, UNRELEASED
 
+Fix rt.cpan.org #31042
+    Makefile corrected to add a library target.
+
 Fix rt.cpan.org #29877
-     Made 00-version.t recognize a "GIT" environment.
+    Made 00-version.t recognize a "GIT" environment.
 
 
 Fix rt.cpan.org #29878
 
-     SPF.pm did not evaluate as true. Thanks Bjorn Hansen.
+    SPF.pm did not evaluate as true. Thanks Bjorn Hansen.
+
+Fix various tests so they are more robust (Ask Bjoern Hansen)
 
 Fix rt.cpan.org #29531
 
